# MFDL

./: .gitignore  Makefile  README.md  clean_data.sh  container.def  experiments_femnist.sh  experiments_housing.sh  pyproject.toml  requirement.txt  requirements.txt  setup.py
MFDL/: __init__.py
MFDL/simulations/: __init__.py  compare_correlations.py  data_utils.py  decentralized_simulation.py  epsilon_computation.py  factorization_experiments.py  factorizations_comparison.py  femnist.py  housing.py  housing_plotter.py  mfdl_optimizer.py  muffliato_accounting.py  optimal_factorization.py  tradeoff_plotter.py  workloads_generator.py
MFDL/test/: __init__.py  test_benchmark_workloads_generator.py  test_workload_generator.py
simulations/: compare_correlations.py  data_utils.py  decentralized_simulation.py  epsilon_computation.py  factorization_experiments.py  factorizations_comparison.py  femnist.py  housing.py  housing_plotter.py  housing_plotter_multigraphs.py  mfdl_optimizer.py  muffliato_accounting.py  optimal_factorization.py  plotters.py  tradeoff_plotter.py  utils.py  workloads_generator.py
test/: test_benchmark_workloads_generator.py  test_workload_generator.py
